lattice-monitor/lattice_monitor/grafana-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-alb
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  ingressClassName: alb
  rules:
    - host: k8s-monitori-grafanaa-48880ff36d-107216460.ap-southeast-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: grafana
                port:
                  number: 3000
