lattice-monitor/lattice_monitor/grafana-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: grafana-ingress
  # namespace: default
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: k8s-ingressn-ingressn-9e221d139b-96f222ea86e5d083.elb.ap-southeast-1.amazonaws.com 
      http:
        paths:
        - backend:
            service:
              name: grafana
              port:
                number: 3000
          path: /
          pathType: Prefix
    # - host: apache.mydomain.com
    #   http:
    #     paths:
    #     - backend:
    #         service:
    #           name: apache-svc
    #           port:
    #             number: 80
    #       path: /
    #       pathType: Prefix
